# vm-remoting

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .vm-targets.json.example  CLAUDE.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  rustfmt.toml  tomlfmt.toml  vm.ps1
src/: main.rs
