[package]
name = "vm-remoting-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server exposing a multi-backend remoting dispatcher (Hyper-V / SSH / WSL) as Model Context Protocol tools"
license = "MIT"
repository = "https://github.com/yuvald-sweet-security/vm-remoting"

[dependencies]
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
rmcp = { version = "1.8.0", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-std",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
